# edlfs

./: CHANGELOG  CHANGELOG.md  CODE_OF_CONDUCT.md  Dockerfile  LICENSE  README.md  environment.yml  pyproject.toml
.github/workflows/: build.yml  distribute.yml  release.yml  static-analysis.yml  tag.yml
docs/: CONTRIBUTING.md  ffspec.ipynb  overview.md
