[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "edlfs"
description = "An fsspec back-end that supports NASA's Earthdata Login (EDL)"
readme = "README.md"
requires-python = ">=3.8"
keywords = ["fsspec", "NASA", "Earthdata"]
license = {text = "MIT License"}
classifiers=[
    'Intended Audience :: Science/Research',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    "Operating System :: OS Independent",
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
]
dependencies = []
dynamic = ["version"]

[project.urls]
"Homepage" = "https://github.com/NASA-Openscapes/edlfs"
"Bug Tracker" = "https://github.com/NASA-Openscapes/edlfs/issues"

[tool.setuptools_scm]
